--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ align-items: center;
     min-height: 100vh;
     display: flex;
     align-items: center;
-   background: url(..//Coffee/bg.jpg) no-repeat;
+   background: url(bg.jpg) no-repeat;
    background-size: cover;
    background-position: center;
 }
