--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Dancing+Script:wght@600&family=Oxygen&family=Source+Code+Pro:wght@300;700&family=Vollkorn:wght@500&family=Young+Serif&display=swap');
 /* font-family: 'Caveat', cursive; */
 @import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@1,500&display=swap');
@@ -215,7 +216,7 @@ align-items: center;
     min-height: 100vh;
     display: flex;
     align-items: center;
-   background: url(bg.jpg) no-repeat;
+   background: url('bg.jpg') no-repeat;
    background-size: cover;
    background-position: center;
 }
