--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ align-items: center;
     min-height: 100vh;
     display: flex;
     align-items: center;
-   background: url('bg.jpg') no-repeat;
+   background: url('bg.jpg') no-repeat fixed center;
    background-size: cover;
    background-position: center;
 }
